fix: :bug: box style bug on small screen sizes

--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -2,7 +2,7 @@
 
 @layer utilities {
   .container {
-    @apply mx-auto my-24;
+    @apply mx-auto my-24 p-2;
   }
 }
 /* components */
@@ -31,7 +31,7 @@
 }
 /* Main */
 #cards-wrapper {
-  @apply grid grid-cols-1  lg:grid-cols-3 gap-6 mx-auto;
+  @apply grid grid-cols-2 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6 md:gap-3.5;
 }
 /* modifier */
 .menu-btn--show {
@@ -59,5 +59,12 @@
   100% {
     opacity: 1;
     transform: scaleY(1);
+  }
+}
+
+/* media queries */
+@media screen and (max-width: 480px) {
+  #cards-wrapper {
+    @apply grid-cols-1;
   }
 }
